--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -604,6 +604,7 @@ input, select, textarea {
 		text-decoration: none;
 		border-bottom: none;
 		position: relative;
+		animation: ;
 	}
 
 		.icon:before {
@@ -1140,9 +1141,12 @@ input, select, textarea {
 			-ms-transition-delay: 0.75s;
 			transition-delay: 0.75s;
 			background-image: linear-gradient(to top, rgba(19, 21, 25, 0.5), rgba(19, 21, 25, 0.5)), url("../../images/overlay.png");
-			background-size: auto, 256px 256px;
-			background-position: center, center;
-			background-repeat: no-repeat, repeat;
+			background-size: auto,
+ 256px 256px;
+			background-position: center,
+ center;
+			background-repeat: no-repeat,
+ repeat;
 			z-index: 2;
 		}
 
@@ -1286,7 +1290,7 @@ input, select, textarea {
 			#header > :first-child:before {
 				display: none;
 			}
-
+ 
 		#header .logo {
 			width: 5.5rem;
 			height: 5.5rem;
@@ -1302,22 +1306,22 @@ input, select, textarea {
 		#header .content {
 			border-style: solid;
 			border-color: #ffffff;
-			border-top-width: 1px;
-			border-bottom-width: 1px;
-			max-width: 100%;
+			border-left-width: 1px;
+			border-right-width: 1px;
+			max-height: 100%;
 		}
 
 			#header .content .inner {
-				-moz-transition: max-height 0.75s ease, padding 0.75s ease, opacity 0.325s ease-in-out;
-				-webkit-transition: max-height 0.75s ease, padding 0.75s ease, opacity 0.325s ease-in-out;
-				-ms-transition: max-height 0.75s ease, padding 0.75s ease, opacity 0.325s ease-in-out;
-				transition: max-height 0.75s ease, padding 0.75s ease, opacity 0.325s ease-in-out;
+				-moz-transition: max-width 0.75s ease, padding 0.75s ease, opacity 0.325s ease-in-out;
+				-webkit-transition: max-width 0.75s ease, padding 0.75s ease, opacity 0.325s ease-in-out;
+				-ms-transition: max-width 0.75s ease, padding 0.75s ease, opacity 0.325s ease-in-out;
+				transition: max-width 0.75s ease, padding 0.75s ease, opacity 0.325s ease-in-out;
 				-moz-transition-delay: 0.25s;
 				-webkit-transition-delay: 0.25s;
 				-ms-transition-delay: 0.25s;
 				transition-delay: 0.25s;
-				padding: 3rem 2rem;
-				max-height: 40rem;
+				padding: 2rem 3rem;
+				max-width: 40rem;
 				overflow: hidden;
 			}
 
@@ -1412,9 +1416,9 @@ input, select, textarea {
 			}
 
 			body.is-preload #header .content .inner {
-				max-height: 0;
-				padding-top: 0;
-				padding-bottom: 0;
+				max-width: 0;
+				padding-left: 0;
+				padding-right: 0;
 				opacity: 0;
 			}
 
@@ -1543,6 +1547,7 @@ input, select, textarea {
 			position: relative;
 			width: 40rem;
 			max-width: 100%;
+			height: 100vh;
 			background-color: rgba(27, 31, 34, 0.85);
 			border-radius: 4px;
 			opacity: 0;
